force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionLineId__c.field-meta.xml
<CustomField>
    <fullName>TransactionLineId__c</fullName>
    <externalId>true</externalId>
    <label>TransactionLineId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>