force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionRMSId__c.field-meta.xml
<CustomField>
    <fullName>TransactionRMSId__c</fullName>
    <externalId>true</externalId>
    <label>Transaction RMS Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>