force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionStHFlag__c.field-meta.xml
<CustomField>
    <fullName>TransactionStHFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The order is placed in a store but the product is delivered at home</description>
    <label>Transaction Store To Home</label>
    <type>Checkbox</type>
</CustomField>