force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionStoreType__c.field-meta.xml
<CustomField>
    <fullName>TransactionStoreType__c</fullName>
    <label>Transaction Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>CSC</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>