force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionStSFlag__c.field-meta.xml
<CustomField>
    <fullName>TransactionStSFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The order is placed in store A and product is collected at store B</description>
    <label>Transaction Store To Store</label>
    <type>Checkbox</type>
</CustomField>