force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TransactionTotalAmount__c</fullName>
    <label>Transaction Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>