force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionTotalConvertedAmountEUR__c.field-meta.xml
<CustomField>
    <fullName>TransactionTotalConvertedAmountEUR__c</fullName>
    <label>Transaction Total Converted Amount EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>