force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionTotalConvertedAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>TransactionTotalConvertedAmountUSD__c</fullName>
    <label>Transaction Total Converted Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>