force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionTotalConvertedAmountYUAN__c.field-meta.xml
<CustomField>
    <fullName>TransactionTotalConvertedAmountYUAN__c</fullName>
    <label>Transaction Total Converted Amount YUAN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>