force-app/main/default/objects/PPR_PurchProduct__c/validationRules/PPR_VR01_DesignationCantBeChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>PPR_VR01_DesignationCantBeChanged</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($User.BypassVR__c ) 
&amp;&amp; 
ISCHANGED( Name ) 
&amp;&amp; 
$Profile.Name &lt;&gt; &quot;LV_Interface_Datastage&quot;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You don&apos;t have the right to edit Purchased Product Designation.</errorMessage>
</ValidationRule>