force-app/main/default/objects/PPR_PurchProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SA__c</field>
        <operation>equals</operation>
        <value>Yohei SATO</value>
    </filters>
    <filters>
        <field>PurchasedDate__c</field>
        <operation>equals</operation>
        <value>9/17/2019</value>
    </filters>
    <label>All</label>
</ListView>