force-app/main/default/objects/PPR_PurchProduct__c/listViews/Purchased_Products.listView-meta.xml
<ListView>
    <fullName>Purchased_Products</fullName>
    <columns>PurchasedDate__c</columns>
    <columns>SKU__c</columns>
    <columns>TransactionStoreType__c</columns>
    <columns>Store__c</columns>
    <columns>SAName__c</columns>
    <columns>Quantity__c</columns>
    <columns>Amount__c</columns>
    <columns>TECH_ConvertedAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Purchased Products</label>
</ListView>